inference-scheduler/sim-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sim-route
  namespace: llm-d
spec:
  parentRefs:
    - name: inference-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: inference.networking.x-k8s.io
          kind: InferencePool
          name: sim-pool
          port: 8000
